Closes #736: cr response

--- a/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
@@ -46,7 +46,7 @@
                                     <h:outputText value="#{systemConfig.getSiteName(dataverseSession.locale)}" escape="false"/>
                                 </div>
                                 <div id="site-subtitle">
-                                    <h:outputText value="#{systemConfig.getSiteFullname(dataverseSession.locale)}" escape="false"/>
+                                    <h:outputText value="#{systemConfig.getSiteFullName(dataverseSession.locale)}" escape="false"/>
                                 </div>
                             </div>
                         </span>
