--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -52,7 +52,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{PublishedDatasetsChart.tableModel.data}"
+                        value="#{PublishedDatasetsChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
@@ -94,7 +94,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{FilesChart.tableModel.data}"
+                        value="#{FilesChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
@@ -136,7 +136,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{FilesStorageChart.tableModel.data}"
+                        value="#{FilesStorageChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
@@ -179,7 +179,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{FilesDownloadedChart.tableModel.data}"
+                        value="#{FilesDownloadedChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
@@ -222,7 +222,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{DatasetsDownloadedChart.tableModel.data}"
+                        value="#{DatasetsDownloadedChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
@@ -265,7 +265,7 @@
 
                 <p:dataTable
                         var="dataRow"
-                        value="#{UsersChart.tableModel.data}"
+                        value="#{UsersChart.tableModel.dataRow}"
                         tableStyleClass=""
                 >
                     <f:facet name="header">
