Closes #710: Added visually hidden tables for charts

--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -53,7 +53,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{PublishedDatasetsChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{PublishedDatasetsChart.tableModel.title}
@@ -95,7 +95,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{FilesChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{FilesChart.tableModel.title}
@@ -137,7 +137,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{FilesStorageChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{FilesStorageChart.tableModel.title}
@@ -180,7 +180,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{FilesDownloadedChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{FilesDownloadedChart.tableModel.title}
@@ -223,7 +223,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{DatasetsDownloadedChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{DatasetsDownloadedChart.tableModel.title}
@@ -266,7 +266,7 @@
                 <p:dataTable
                         var="dataRow"
                         value="#{UsersChart.tableModel.dataRow}"
-                        tableStyleClass=""
+                        tableStyleClass="visuallyhidden"
                 >
                     <f:facet name="header">
                         #{UsersChart.tableModel.title}
