--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -489,7 +489,7 @@
                                              jsf:rendered="#{fieldsByType.datasetFieldType.name!='publication' and fieldsByType.datasetFieldType.name!='keyword'  }">
                                             <label for="metadata_#{dsf.datasetFieldType.name}"
                                                    class="col-sm-3 control-label">
-                                                #{fieldsByType.datasetFieldType.localeTitle}
+                                                <p:outputLabel value="#{fieldsByType.datasetFieldType.localeTitle}" escape="false" />
                                                 <span class="glyphicon glyphicon-question-sign tooltip-icon" tabindex="0"
                                                       data-toggle="tooltip" data-placement="auto right"
                                                       data-original-title="#{fieldsByType.datasetFieldType.localeDescription}"></span>
