--- a/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
@@ -194,7 +194,7 @@
             <!--NON-TYPE FACETS-->
             <h:form id="facetCategoryForm" rendered="#{SearchIncludeFragment.searchResultsCount > 0}">
                 <p:dataList id="facetCategoryList" value="#{SearchIncludeFragment.facetCategoryList}" var="facetCategory">
-                    <h:outputText value="#{facetCategory.displayName}" styleClass="facetCategoryName"/>
+                    <h:outputText value="#{facetCategory.displayName}" styleClass="facetCategoryName" escape="false"/>
                     <p:dataList value="#{facetCategory.facetLabel}" var="facetLabel" rows="#{SearchIncludeFragment.getNumberOfFacets(facetCategory.name,5)}">
                         <h:outputLink value="#{widgetWrapper.wrapURL(page)}" rendered="#{!SearchIncludeFragment.filterQueries.contains(facetLabel.filterQuery)}" styleClass="facetLink">
                             <h:outputFormat value="#{facetLabel.displayName} &#40;{0}&#41;">
