--- a/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 form-group form-col-container">
-                            <p:outputLabel class="col-sm-3 control-label" for="affiliation" value="#{bundle.affiliation}" escape="false">
+                            <p:outputLabel styleClass="col-sm-3 control-label" for="affiliation" value="#{bundle.affiliation}" escape="false">
                                 <span class="glyphicon glyphicon-question-sign tooltip-icon" tabindex="0"
                                       data-toggle="tooltip" data-placement="auto right"
                                       data-original-title="#{bundle['dataverse.affiliation.title']}"></span>
